# Compiler-labs

./: .gitignore
lab1/: gradeMe.sh  main.c  myimpl.c
lab2/: driver.c  errormsg.c  gradeMe.sh  lex.yy.c  lextest  ref.md  test.tig  tiger.lex  util.c
lab3/: CMakeLists.txt  absyn.c  absyn.h  gradeMe.sh  parse.c  prabsyn.c  symbol.c  symbol.h  tiger.y
lab4/: CMakeLists.txt  absyn.c  absyn.h  env.c  env.h  errormsg.c  parse.c  prabsyn.c  semant.c  semant.h  symbol.c  symbol.h  table.c  tiger.y  types.c  types.h
lab5/: CMakeLists.txt  env.c  env.h  errormsg.c  frame.h  gradeMe.sh  makefile  parse.c  prabsyn.c  prabsyn.h  printtree.c  semant.c  symbol.h  table.c  table.h  temp.c  temp.h  tiger.lex  translate.c  tree.c  tree.h  types.c  types.h  x86frame.c
lab6/: CMakeLists.txt  Makefile  absyn.c  absyn.h  assem.c  assem.h  canon.c  canon.h  codegen.c  codegen.h  color.c  color.h  env.c  escape.c  flowgraph.c  flowgraph.h  frame.h  gradeMe.sh  graph.c  graph.h  helper.h  liveness.c  liveness.h  main.c  prabsyn.h  printtree.c  printtree.h  regalloc.c  regalloc.h  runtime.c  semant.c  semant.h  symbol.c  table.c  temp.c  temp.h  translate.c  translate.h  tree.c  tree.h  (+5 more)
